service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testing-kube-service-np
  labels:
    name: testing-kube-deploy
    app: testing-kube-app
spec:
  type: NodePort
  selector:
    app: testing-kube-app
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30072
