ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testing-kube-ing
  annotations:
    spec.ingressClassName: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testing-kube-app
                port:
                  number: 30072
